--- a/my_newsapp/templates/my_newsapp/category.html
+++ b/my_newsapp/templates/my_newsapp/category.html
@@ -36,7 +36,7 @@
   <div class="container">
     <div class="row padding-top-20 padding-bottom-20">
       <div class="col-md-2">
-        <img src="{% thumbnail article.thumbnail_image 150x150 crop %}">
+        <img src="{% thumbnail article.images.first.image 150x150 crop %}">
       </div>
       <div class="col-md-6">
         <h3><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h3>
