--- a/my_newsapp/templates/my_newsapp/detail.html
+++ b/my_newsapp/templates/my_newsapp/detail.html
@@ -41,11 +41,57 @@
   <div class="article">
     <h2>{{ article.title }}</h2>
     <pre class="padding-bottom-20">In <a href="{{ article.category.get_absolute_url }}">{{article.category.title}}</a>, by {{ article.author }}</pre>
-    {% if article.images.first.image %}
-      <img class="image-fit padding-bottom-20" src="{{ article.images.first.image.url }}">  
+
+    {% if article.images.count < 2 %} {% comment %} Show just that one image {% endcomment %}
+    <div style="height: 350px">
+      <img class="image-fit" src="{{ article.images.first.image.url }}"> 
+    </div>
+    {% elif %} {% comment %} Show carousel of images {% endcomment %}
+      <div id="gallery" class="carousel slide" data-ride="carousel">
+        {% comment %} carousel indicators of images ->  - - - - {% endcomment %}
+        <ol class="carousel-indicators">
+          {% for i in article.images.all  %}
+            {% if forloop.counter0 == 0 %}
+              <li data-target="#gallery" data-slide-to="0" class="active"></li>            
+            {% elif %}
+              <li data-target="#gallery" data-slide-to="{{ forloop.counter0 }}"></li>
+            {% endif %}
+          {% endfor %}
+        </ol>
+        {% comment %} carousel {% endcomment %}
+        <div class="carousel-inner" style="background: rgb(10, 10, 10)">
+          {% for image in article.images.all  %}
+            {% if forloop.counter == 1 %}
+              <div id="image-{{ forloop.counter0 }}" class="carousel-item active" style="height: 350px">
+                <img class="image-fit" src="{{ image.image.url }}">
+                <div class="carousel-caption ">
+                  <p>{{ image.description }}</p>
+                </div>
+              </div>
+            {% elif %}
+              <div id="image-{{ forloop.counter0 }}" class="carousel-item" style="height: 350px">
+                <img class="image-fit" src="{{ image.image.url }}">
+                <div class="carousel-caption ">
+                  <p>{{ image.description }}</p>
+                </div> {% endcomment %}
+              </div>
+            {% endif %}
+          {% endfor %}
+        </div>
+        {% comment %} carousel left/right (< ; >) buttons {% endcomment %}
+        <a class="carousel-control-prev" href="#gallery" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#gallery" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div> 
     {% endif %}
-      <p>{{ article.text | linebreaks }}</p> 
+    <p class="pt-4">{{ article.text | linebreaks }}</p> 
   </div>
+
   
 {% endblock content %}
 
@@ -54,5 +100,40 @@
   <script>
     //On detail page, always scroll to the top of article
     window.scrollTo(0, 250);
+
+let images = document.querySelectorAll('.carousel-item');
+let descriptions = document.querySelectorAll('.description');
+let previous = document.querySelector('.carousel-control-prev')
+let next = document.getElementsByClassName('carousel-control-next')
+
+previous[0].addEventListener('onclick', function() {
+  setTimeout(changeDescription, 200);
+})
+
+next[0].addEventListener('onclick', function() {
+  setTimeout(changeDescription, 200);
+})
+
+function changeDescription(){
+    for (let i = 0; i < images.length; i++) {
+        if (images[i].classList.contains('active')) {
+            descriptions[i].style.display = 'block';
+        } else descriptions[i].style.display = 'none'; 
+    } 
+    // setTimeout(changeDescription, 5001); 
+}
+
+
+
+changeDescription();
+
+
+
+
+
+
+    
+    
+
 </script>
 {% endblock script %}
