--- a/my_newsapp/static/my_newsapp/home_style.css
+++ b/my_newsapp/static/my_newsapp/home_style.css
@@ -37,6 +37,10 @@ h3 a:hover, h4 a:hover, h5 a:hover, p a:hover  {
   padding-top: 30px;
 }
 
+.padding-top-40 {
+  padding-top: 40px;
+}
+
 .padding-top-20 {
   padding-top: 20px;
 }
@@ -117,11 +121,8 @@ h3 a:hover, h4 a:hover, h5 a:hover, p a:hover  {
 }
 
 .article {
-  width: 100%;
-  padding-right: 300px;
-  padding-left: 300px;
-  margin-right: auto;
-  margin-left: auto;
+  margin-right: 300px;
+  margin-left: 300px;
   text-align: justify;
   line-height: 1.7;
   padding-top: 45px;
@@ -267,14 +268,18 @@ a:not([href]):not([tabindex]){
 
 .carousel-caption {
   position: relative;
-  right: 15%;
+  right: auto;
   bottom: 20px;
-  left: 15%;
-  z-index: 10;
+  left: auto;
+  z-index: -10;
   padding-top: 20px;
   padding-bottom: 20px;
-  color: rgb(141, 38, 38);
+  color: rgb(76, 76, 76);
   text-align: center;
+  font-size: 14px;
+  line-height: 1.5em;
+  height: 6em;
+  overflow: hidden;
 }
 
 
