comments app created Comment model implemented

--- a/my_newsapp/templates/my_newsapp/detail.html
+++ b/my_newsapp/templates/my_newsapp/detail.html
@@ -96,6 +96,9 @@
     <p class="padding-top-40" style="z-index: 1000">{{ article.text | linebreaks }}</p> 
   </div>
 
+  <div class="comments">
+
+  </div>
   
 {% endblock content %}
 
