--- a/comments/templates/comments/comments.html
+++ b/comments/templates/comments/comments.html
@@ -12,25 +12,30 @@
 
   {% if comments %}
     {% for comment in comments %}
-      <div class="comment">
+      
+      <div class="comment" id="comment-{{ forloop.counter }}">
+        <p hidden id="comment-{{ forloop.counter }}-object_id">{{ comment.id }}</p>
         <p class="margin-bottom-0"><strong>{{ comment.author }}</strong></p>
         <p class="pub-date margin-bottom-5">{{ comment.pub_date }}</p>
         <p class="margin-bottom-0">{{ comment.text }}</p>
         
         <button class="reply-button">Reply</button>
 
-        <form class="reply reply-form" action="" method="POST" id="reply-form-{{ forloop.counter }}" style="display: none">
-          {% crispy reply_form %}
+        <form class="reply-form" action="" method="POST" id="reply-form-{{ forloop.counter }}" style="display: none">
+          {% crispy comment_form %}
         </form>
         <div class="margin-bottom-30"></div>
-
-        {% for reply in comment.replies.all  %}
-          <div class="reply">
-            <p class="margin-bottom-0"><strong>{{ comment.author }}</strong></p>
-            <p class="pub-date margin-bottom-5">{{ comment.pub_date }}</p>
-            <p class="margin-bottom-0">{{ comment.text }}</p>
-          </div>
-        {% endfor %}  
+        
+        <div id="replies-{{ forloop.counter }}">
+          {% for reply in comment.replies.all  %}
+            <div id="{{ comment.id }}-{{ reply.id }}"class="reply">
+              <p class="margin-bottom-0"><strong>{{ reply.author }}</strong></p>
+              <p class="pub-date margin-bottom-5">{{ reply.pub_date }}</p>
+              <p class="margin-bottom-20">{{ reply.text }}</p>
+            </div>
+          {% endfor %}
+        </div>
+        
       </div>
     {% endfor %}  
   {% else %}
