--- a/my_newsapp/templates/my_newsapp/detail.html
+++ b/my_newsapp/templates/my_newsapp/detail.html
@@ -4,6 +4,10 @@
 
 {% block title %}{{ article.title }}{% endblock title %}
 
+{% block head_scripts %}
+<script>var URL = "{% url 'my_newsapp:article-detail' category=article.category.title id=article.id slug=article.slug %}";</script> 
+{% endblock head_scripts %}
+
 {% block style %}
   {{ block.super }}
   <link rel="stylesheet" href="{% static 'comments/comments.css' %}">
@@ -105,8 +109,8 @@
 
 {% block script %}
   {{ block.super }}
-  {% comment %} <script src="{% static 'comments/comments.js' %}"></script> {% endcomment %}
-  <script>
+  <script src="{% static 'comments/comments.js' %}"></script>
+  <script>    
     //On detail page, always scroll to the top of article
    // window.scrollTo(0, 250);
 </script>
