--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,9 @@
 <head>
   <title>{% block title%}{% endblock title%}</title>
 
+  {% block head_scripts %}
+  {% endblock head_scripts %}
+
   {% block style %}
     <link rel="stylesheet" href="{% static 'css/bootstrap-4.0.0.css' %}">
     <link rel="stylesheet" href="{% static 'my_newsapp/home_style.css' %}">   
