komentiranje rjeseno za sad super samo za sebe ajax radi izvrsno

--- a/comments/templates/comments/comments.html
+++ b/comments/templates/comments/comments.html
@@ -1,44 +1,13 @@
-{% load crispy_forms_tags %}
+{% for comment in comments %}
+  <div class="comment" id="{{ comment.id }}">
+    <p class="margin-bottom-0"><strong>{{ comment.author }}</strong></p>
+    <p class="pub-date margin-bottom-5">{{ comment.pub_date }}</p>
+    <p class="margin-bottom-0">{{ comment.text }}</p>
+    <button class="reply-button">Reply</button>
+  
+    {% comment %} {% include "comments/reply_form.html" %} {% endcomment %}
+    <div class="margin-bottom-30"></div>
 
-{% load crispy_forms_tags %}
-
-<div class="comments-body">
-  <h5 class="title">Comments</h5>
-
-  <form action="" method="POST" id="comment-form">
-    {% crispy comment_form %}
-  </form>
-  <div class="margin-bottom-30"></div>
-
-  {% if comments %}
-    {% for comment in comments %}
-      
-      <div class="comment" id="comment-{{ forloop.counter }}">
-        <p hidden id="comment-{{ forloop.counter }}-object_id">{{ comment.id }}</p>
-        <p class="margin-bottom-0"><strong>{{ comment.author }}</strong></p>
-        <p class="pub-date margin-bottom-5">{{ comment.pub_date }}</p>
-        <p class="margin-bottom-0">{{ comment.text }}</p>
-        
-        <button class="reply-button">Reply</button>
-
-        <form class="reply-form" action="" method="POST" id="reply-form-{{ forloop.counter }}" style="display: none">
-          {% crispy comment_form %}
-        </form>
-        <div class="margin-bottom-30"></div>
-        
-        <div id="replies-{{ forloop.counter }}">
-          {% for reply in comment.replies.all  %}
-            <div id="{{ comment.id }}-{{ reply.id }}"class="reply">
-              <p class="margin-bottom-0"><strong>{{ reply.author }}</strong></p>
-              <p class="pub-date margin-bottom-5">{{ reply.pub_date }}</p>
-              <p class="margin-bottom-20">{{ reply.text }}</p>
-            </div>
-          {% endfor %}
-        </div>
-        
-      </div>
-    {% endfor %}  
-  {% else %}
-    <p>No comments for this Article yet.</p>
-  {% endif %}
-</div>
+    {% include "comments/replies.html" %}
+  </div>  
+{% endfor %}  
