--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
       {% comment %} main nav-bar links {% endcomment %}
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="/home/">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/news/home/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
