comments fully working on its own and javascript refactored for now

--- a/comments/templates/comments/base.html
+++ b/comments/templates/comments/base.html
@@ -15,7 +15,7 @@
     {% if comments %}
       {% include "comments/comments.html" %}
     {% else %}
-      <p id="no-comments-yet-message">No comments for this Article yet.</p>
+      <p id="no-comments-yet-message">No comments yet.</p>
     {% endif %}
   </div>
   
