--- a/comments/static/comments/css/comments.css
+++ b/comments/static/comments/css/comments.css
@@ -29,7 +29,14 @@ li {
 	font-size: 14px;
 }
 
-.reply-button {
+.no-replies-message {
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	font-weight: 600;
+	font-size: 12px;
+	color: rgb(75, 75, 75);
+}
+
+.reply-button, .show-replies {
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	font-weight: 600;
 	font-size: 12px;
@@ -41,7 +48,7 @@ li {
 	cursor: pointer;
 }
 
-.reply-button:focus {
+.reply-button:focus, .show-replies:focus {
 	outline:none !important;
 }
 
