--- a/comments/templates/comments/base.html
+++ b/comments/templates/comments/base.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 
-<link rel="stylesheet" href="{% static 'css/bootstrap-4.0.0.css' %}">
-<link rel="stylesheet" href="{% static 'comments/css/comments.css' %}">
+<!-- <link rel="stylesheet" href="{% static 'css/bootstrap-4.0.0.css' %}">
+<link rel="stylesheet" href="{% static 'comments/css/comments.css' %}"> -->
 
 <div id="error-log"></div>
 
@@ -21,7 +21,8 @@
   
 </div>
 
-<script src="{% static 'js/jquery-3.3.1.js' %}"></script>
-<script src="{% static 'js/bootstrap-4.0.0.js' %}"></script>
+<!-- <script src="{% static 'js/jquery-3.3.1.js' %}"></script>
+<script src="{% static 'js/bootstrap-4.0.0.js' %}"></script> -->
+
 <!-- veoma bitno: type="module"  -> inače import u main.js-u ne radi ! -->
-<script type="module" src="{% static 'comments/js/main.js' %}"></script>
+<!-- <script type="module" src="{% static 'comments/js/main.js' %}"></script> -->
