--- a/comments/templates/comments/comments.html
+++ b/comments/templates/comments/comments.html
@@ -2,7 +2,7 @@
   <div class="comment" id="{{ comment.id }}">
     <p class="margin-bottom-0"><strong>{{ comment.author }}</strong></p>
     <p class="pub-date margin-bottom-5">{{ comment.pub_date }}</p>
-    <p class="margin-bottom-0">{{ comment.text }}</p>
+    <p class="text margin-bottom-0">{{ comment.text }}</p>
     {% if comment.replies.all %}
       <button class="show-replies" id="show-replies-{{ comment.id }}" style="white-space:pre">Show replies</button>
     {% else %}
@@ -26,7 +26,7 @@
 
     <div class="margin-bottom-30"></div>
 
-    <div id="replies-{{ comment.id }}" style="display:none">
+    <div id="replies-{{ comment.id }}" class="replies" style="display:none">
       {% include "comments/replies.html" %}
     </div>
     
