--- a/comments/templates/comments/delete_comment_modal.html
+++ b/comments/templates/comments/delete_comment_modal.html
@@ -1,24 +1,44 @@
-<div class="modal fade" id="DeleteModalCenter-{{ comment.id }}" tabindex="-1" role="dialog" aria-labelledby="DeleteModalCenterTitle" aria-hidden="true">
+<div class="modal fade" 
+     id="{% if reply %}DeleteModalCenter-{{ reply.id }}{% else %}DeleteModalCenter-{{ comment.id }}{% endif %}" 
+     tabindex="-1" role="dialog" aria-labelledby="DeleteModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
-        <form class="delete-form" action="" method="POST">
-          {% csrf_token %}
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLongTitle">
-                Confirm comment deletion
-            </h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body"> 
+      <form class="delete-form"
+            id="{% if reply %}delete-form-{{ reply.id }}{% else %}delete-form-{{ comment.id }}{% endif %}" 
+            action="{% if reply %}
+                      {% url 'comments:delete' reply.id %}
+                    {% else %}
+                      {% url 'comments:delete' comment.id %}
+                    {% endif %}" 
+            method="POST">
+        {% csrf_token %}
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">
+            {% if reply %}
+              Confirm reply deletion
+            {% else %}
+              Confirm comment deletion
+            {% endif %}                
+          </h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body"> 
+          {% if reply %}
+            <p>Are you sure you want to delete this reply</p>
+          {% else %}
             <p>Are you sure you want to delete this comment</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-            <button type="submit" class="btn btn-primary">Delete</button>
-          </div>
-        </form>
+          {% endif %}  
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button type="submit" class="btn btn-primary">Delete</button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
+
+
+
