--- a/my_newsapp/templates/my_newsapp/create_article.html
+++ b/my_newsapp/templates/my_newsapp/create_article.html
@@ -17,6 +17,9 @@
   </div>
 {% endblock jumbo %}
 
+{% block navigation %}
+  {% include "my_newsapp/snippets/navigation.html" %}
+{% endblock navigation %}
 
 {% block content %}
 
