--- a/my_newsapp/templates/my_newsapp/detail.html
+++ b/my_newsapp/templates/my_newsapp/detail.html
@@ -17,6 +17,10 @@
   </div>
 {% endblock jumbo %}
 
+{% block navigation %}
+  {% include "my_newsapp/snippets/navigation.html" %}
+{% endblock navigation %}
+
 {% block content %}
   <span id="DetailPage" style="display: none;"></span>
   
