--- a/comments/templates/comments/base.html
+++ b/comments/templates/comments/base.html
@@ -11,7 +11,7 @@
   {% if request.user.is_authenticated %}
     {% include "comments/comment_form.html" %}
   {% else %}
-    <h5><a href="">Login</a> to comment.</h5>
+    <h5><a href="{{ login_url }}?next={{request.path}}">Login</a> to comment.</h5>
   {% endif %}
   
   <div class="margin-bottom-30"></div>
