--- a/my_newsapp/templates/my_newsapp/category.html
+++ b/my_newsapp/templates/my_newsapp/category.html
@@ -20,6 +20,10 @@
   </div>
 {% endblock jumbo %}
 
+{% block navigation %}
+  {% include "my_newsapp/snippets/navigation.html" %}
+{% endblock navigation %}
+
 {% block content %}
 
   <div class="container mt-60px">
