--- a/templates/base.html
+++ b/templates/base.html
@@ -3,14 +3,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  
   <title>{% block title%}{% endblock title%}</title>
-
-  {% block head_scripts %}
-  {% endblock head_scripts %}
 
   {% block style %}
     <link rel="stylesheet" href="{% static 'css/bootstrap-4.0.0.css' %}">
-    <link rel="stylesheet" href="{% static 'my_newsapp/home_style.css' %}">   
+    <link rel="stylesheet" href="{% static 'my_newsapp/style.css' %}">   
   {% endblock style %}
 
 </head>
@@ -19,58 +20,8 @@
   {% block jumbo %}  
   {% endblock jumbo %}
 
-<!-- base nav-bar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container">
-    <button type="button" class="btn btn-success">
-      <a href="{% url 'my_newsapp:create-article' %}">Write something</a>
-    </button>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      {% comment %} main nav-bar links {% endcomment %}
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/news/home/">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'my_newsapp:latest-articles' %}">Latest Articles</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Categories
-          </a>
-          {% comment %} categories list {% endcomment %}
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          {% for category in categories %}
-            {% comment %} are there articles in a category? If yes, create category submenu {% endcomment %}
-            {% if category.articles.all %}
-              <li class="dropdown-submenu">
-                <a class="dropdown-item dropdown-toggle" href="{{ category.get_absolute_url }}">{{ category.title }}</a>
-                {% comment %} list of categorie's articles {% endcomment %}
-                <ul class="dropdown-menu">
-                  {% for article in category.articles.all %}
-                    <li>
-                      <a class="dropdown-item" href="{{ article.get_absolute_url }}">{{ article.title }}</a>
-                    </li>
-                  {% endfor %}
-                </ul>
-              </li>  
-            {% endif %}       
-          {% endfor %}
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-      </ul>
-    </div>
-</div>
-</nav>
+  {% block navigation %}
+  {% endblock navigation %}
 
   {% block content %}
   {% endblock content %}
