--- a/comments/static/comments/css/comments.css
+++ b/comments/static/comments/css/comments.css
@@ -40,7 +40,7 @@
 	color: rgb(75, 75, 75);
 }
 
-.comments-body .reply-button, .show-replies, .delete-button {
+.comments-body .reply-button, .show-replies, .edit-button, .delete-button {
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	font-weight: 600;
 	font-size: 12px;
@@ -48,11 +48,15 @@
 	background:none;
 	border:none;
 	margin:0;
-	padding:0;
+	padding: 0px 10px 0px 0px;
 	cursor: pointer;
 }
 
-.comments-body .reply-button:focus, .show-replies:focus, .delete-button:focus {
+.comments-body .show-replies{
+	width: 90px;
+}
+
+.comments-body .reply-button:focus, .show-replies:focus, .edit-button:focus, .delete-button:focus {
 	outline:none !important;
 }
 
